# truelayer-cli

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build_test.yaml  release.yaml  test_and_lint.yaml
src/: lib.rs  main.rs  main2.rs
src/client/: mod.rs
src/client/v3/: client.rs  mod.rs
src/client/v3/payment/: create.rs  merchant_account.rs  mockprovider.rs  mod.rs
src/client/v3/payment/authorizationflow/: mod.rs  provider_selection.rs  start.rs
src/commands/: commander.rs  mod.rs  settledwebhook.rs
src/platform/: client.rs  mod.rs  model.rs  transport.rs
