[package]
name = "truelayer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
truelayer-rust = {git = "https://github.com/TrueLayer/truelayer-rust"}
json = "0.12.4"
anyhow = "1.0.58"
reqwest = { version = "0.11.11", features = ["blocking"] }
serde_json = "1.0.82"
clap = { version = "3.2.8", features = ["derive"]}
tokio = "1.19.2"
regex = "1.6.0"
colored = "*"