[package]
name = "truelayer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
truelayer-rust = {git = "https://github.com/TrueLayer/truelayer-rust"}
json = "0.12.4"
anyhow = "1.0.58"
reqwest = { version = "0.11.11", features = ["blocking"] }
reqwest-retry = "0.1.5"
reqwest-middleware = "0.1.6"
serde_json = "1.0.82"
clap = { version = "3.2.8", features = ["derive"]}
tokio = { version = "1.3.0", features = ["full"]}
regex = "1.6.0"
colored = "*"
pubnub-hyper = { git = "https://github.com/pubnub/rust" }
futures = "0.3.21"
serde = "*"
futures-util = "0.3.21"
timer = "0.2.0"
chrono = "0.4"
