[package]
name = "truelayer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
truelayer-rust = {git = "https://github.com/TrueLayer/truelayer-rust"}
json = "0.12.4"
anyhow = "1.0.69"
reqwest = { version = "0.11.14", features = ["blocking"] }
reqwest-retry = "0.2.1"
reqwest-middleware = "0.2.0"
url = "2.3.1"
serde_json = "1.0.94"
clap = { version = "4.1.8", features = ["derive"]}
tokio = { version = "1.26.0", features = ["full"]}
regex = "1.7.1"
colored = "2"
futures = "0.3.26"
serde = "1"
futures-util = "0.3.26"
timer = "0.2.0"
chrono = "0.4"
